# recipinator

./: .gitignore  README.md
backend/: main.py
backend/be/: README.md  pyproject.toml
backend/be/notebooks/chroma/: sample.ipynb  vector_db_sample.ipynb
backend/be/notebooks/insta/: test_insta_01.ipynb
backend/be/notebooks/langid/: identify.ipynb  sample.ipynb
backend/be/notebooks/logleveller/: idea.ipynb  mod.py
backend/be/notebooks/relation/: doc.md  many_to_many_attr.py  many_to_many_rel.py  many_to_many_sa.py  one_to_many_base.py  one_to_many_dup.py  one_to_many_sa_base.py  one_to_many_sa_dup.py  one_to_many_unique.py  one_to_many_with.py
backend/be/notebooks/relation/many_to_many_with/: Author.py  Recipe.py  RecipeTagLink.py  Tag.py  test_auth_rec.py
backend/be/notebooks/whisper/: transcribe.ipynb
backend/be/src/be/alembic/: env.py
backend/be/src/be/alembic/versions/: initial_migration.py
backend/be/src/be/app/: README.md  crud.py  database.py  main.py  main_minimal.py  models.py  schemas.py  send_req.sh
backend/be/src/be/app/sqlmodels/: Author.py  README.md  Recipe.py  RecipeShuffle.py  RecipeSort.py  RecipeTagLink.py  Tag.py
backend/be/src/be/data/: utils.py  vector_db.py
backend/be/src/be/social/insta/: loader.py  structures.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  Recipe.css  Recipe.tsx  index.css
frontend/src/components/DragSample/: Elements.css  Elements.tsx
frontend/src/components/Navbar/: Elements.tsx  Navbar.css  Navbar.tsx
frontend/src/components/Preparation/: Preparation.css  Preparation.tsx
frontend/src/components/Recipe/: Recipe.css  Recipe.tsx
frontend/src/components/RecipeBrowser/: RecipeBrowser.tsx
frontend/src/components/RecipeCard/: RecipeCard.tsx
frontend/src/components/RecipeList/: RecipeList.tsx
frontend/src/components/RecipeSorter/: RecipeSorter.tsx
frontend/src/components/SearchBox/: SearchBox.css  SearchBox.tsx
frontend/src/components/SearchSample/: Elements.css  Elements.tsx
frontend/src/components/Step/: Step.css  Step.tsx
frontend/src/components/StrictModeDroppable/: StrictModeDroppable.tsx
frontend/src/pages/: about.jsx  recipe_browser.tsx  recipe_list.tsx  sample_drag.tsx  sample_search.tsx
