[tool.poetry]
name = "be"
version = "0.1.0"
description = ""
authors = ["Pitrified <nobilipietro@gmail.com>"]
readme = "README.md"
packages = [{include = "be", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.97.0"
black = "^23.3.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
instaloader = "^4.9.6"
loguru = "^0.7.0"
matplotlib = "^3.7.1"
ipykernel = "^6.23.2"
pydocstyle = "^6.3.0"
isort = "^5.12.0"
tqdm = "^4.65.0"
sqlalchemy = "^2.0.16"
jsons = "^1.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
