[tool.poetry]
name = "be"
version = "0.1.0"
description = ""
authors = ["Pitrified <nobilipietro@gmail.com>"]
readme = "README.md"
packages = [{include = "be", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.97.0"
black = "^23.3.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
instaloader = "^4.9.6"
loguru = "^0.7.0"
matplotlib = "^3.7.1"
ipykernel = "^6.23.2"
pydocstyle = "^6.3.0"
isort = "^5.12.0"
tqdm = "^4.65.0"
jsons = "^1.6.3"
pydantic = "^1.10.9"
alembic = "^1.11.1"
sqlmodel = "^0.0.8"
openai-whisper = "^20231117"
pydub = "^0.25.1"
torch = "^2.3.1"
chromadb = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
force_sort_within_sections = true
multi_line_output = 3
